# Numer-ReactRust-WasmLib

./: note.txt
NumerProj_main/: package-lock.json  package.json  vite.config.js
NumerProj_main/src/: App.css  App.jsx
NumerProj_main/src/components/: Loader.jsx  SingleRegression.jsx  WasmError.jsx  WasmLoader.jsx
NumerProj_main/src/pages/: CholeskyLinear.jsx  CramerLinear.jsx  GuassJordanLinear.jsx  InverseMatrixLinear.jsx  MultipleRegression.jsx  SingleRegression.jsx
NumerProj_main/src/pkg/: cal_core.d.ts  cal_core.js  cal_core_bg.wasm  cal_core_bg.wasm.d.ts
cal-core/: Cargo.toml
cal-core/src/: differential.rs  integration.rs  interpolation.rs  lib.rs  linear_eq.rs  regression.rs  root_eq.rs  utils.rs
cal-core/tests/: README.md  differential.rs  integration.rs  interpolation.rs  linear_eq.rs  regression.rs  root_eq.rs
main/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
main/src/: App.css  App.jsx  AppPre.jsx
main/src/components/: ExpressionInput.jsx  LatexInput.jsx  ParamInput.jsx
main/src/config/: exampleSchemas.js  inputSchemas.js  ioSchemas.js  matrixSchemas.js  methodConfigs.js  note  outputStructs.js  paramSchemas.js  routeConfig.js
main/src/hooks/: useLocalStorage.js  useTheme.js  useWasmInit.js
main/src/pages/: CholeskyLinear.jsx  CramerLinear.jsx  GuassJordanLinear.jsx  GuassNaiveLinear.jsx  InverseMatrixLinear.jsx  LULinear.jsx  MethodPage.jsx  MultipleRegression.jsx  SingleRegression.jsx  Test.jsx
main/src/wasm/: cal_core.d.ts  cal_core.js  cal_core_bg.wasm  cal_core_bg.wasm.d.ts  package.json
(+69 files in other folders)
