[package]
name = "cal-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
meval = "0.2"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]